[HIG-2163] fix comment reply author styling (#2445)
Ensure long names and long 'replied when' strings
do not wrap and make the comments feed look strange. When a name is too long, use eclipses and limit wrapping.

--- a/frontend/src/components/Comment/CommentHeader.module.scss
+++ b/frontend/src/components/Comment/CommentHeader.module.scss
@@ -25,17 +25,6 @@
     }
 }
 
-.commentAuthor {
-    color: var(--text-primary);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: initial;
-    margin: 0 !important;
-    max-width: 180px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
 .textContainer {
     display: flex;
     flex-direction: column;
@@ -43,7 +32,21 @@
     &.small {
         flex-direction: row;
         gap: 0.5em;
+        justify-content: space-between;
+        margin-bottom: 1em;
     }
+}
+
+.commentAuthor {
+    color: var(--text-primary);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: initial;
+    margin: 0 !important;
+    max-height: 1.5em;
+    max-width: 180px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .ellipsisButton {
